Add metadata to meeting report 25681204
Added metadata for meeting report including title, keywords, and description.

--- a/25681204-0001.md
+++ b/25681204-0001.md
@@ -1,3 +1,8 @@
+---
+title: "รายงานผลการประชุม 25681204"
+keywords: ["ประชุม", "รายงาน", "25681204", "องค์กร"]
+description: "สรุปผลการประชุมประจำวันที่ 4 ธันวาคม 2568 พร้อมรายละเอียดและข้อสรุปสำคัญ"
+---
 hello.
 <a href="/news">hello</a>
 <script>console.log('hi');</script>
