--- a/25681204-0001.md
+++ b/25681204-0001.md
@@ -1,8 +1,18 @@
----
-title: "รายงานผลการประชุม 25681204"
-keywords: ["ประชุม", "รายงาน", "25681204", "องค์กร"]
-description: "สรุปผลการประชุมประจำวันที่ 4 ธันวาคม 2568 พร้อมรายละเอียดและข้อสรุปสำคัญ"
----
 hello.
 <a href="/news">hello</a>
-<script>console.log('hi');</script>
+<script>
+  // ตั้งค่า <title>
+  if (title) document.title = 'hello';
+  // description
+  let metaDescription = document.querySelector("meta[name='description']");
+  if (metaDescription) metaDescription.setAttribute("content", 'hello');
+  // keywords
+  let metaKeywords = document.querySelector("meta[name='keywords']");
+  if (metaKeywords) metaKeywords.setAttribute("content", 'hello');
+  // og:title
+  let ogTitleTag = document.querySelector("meta[property='og:title']");
+  if (ogTitleTag) ogTitleTag.setAttribute("content", 'hello');
+  // og:description
+  let ogDescriptionTag = document.querySelector("meta[property='og:description']");
+  if (ogDescriptionTag) ogDescriptionTag.setAttribute("content", 'hello');
+</script>
