Refactor meta tags setting in script

--- a/25681204-0001.md
+++ b/25681204-0001.md
@@ -2,17 +2,17 @@ hello.
 <a href="/news">hello</a>
 <script>
   // ตั้งค่า <title>
-  if (title) document.title = 'hello';
+  document.title = 'hello';
   // description
   let metaDescription = document.querySelector("meta[name='description']");
-  if (metaDescription) metaDescription.setAttribute("content", 'hello');
+  metaDescription.setAttribute("content", 'hello');
   // keywords
   let metaKeywords = document.querySelector("meta[name='keywords']");
-  if (metaKeywords) metaKeywords.setAttribute("content", 'hello');
+  metaKeywords.setAttribute("content", 'hello');
   // og:title
   let ogTitleTag = document.querySelector("meta[property='og:title']");
-  if (ogTitleTag) ogTitleTag.setAttribute("content", 'hello');
+  ogTitleTag.setAttribute("content", 'hello');
   // og:description
   let ogDescriptionTag = document.querySelector("meta[property='og:description']");
-  if (ogDescriptionTag) ogDescriptionTag.setAttribute("content", 'hello');
+  ogDescriptionTag.setAttribute("content", 'hello');
 </script>
